# BeeKeeper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  ruff.toml  run_beekeeper.py  run_lakekeeper.py
demo/: COMPACTION_INTERNALS.md  RUNBOOK.md  create_demo_table.py  create_nonpartitioned_table.py  create_single_partition_table.py  create_two_partitions_table.py
src/beekeeper/: __init__.py  __main__.py  cli.py  config.py  models.py
src/beekeeper/core/: __init__.py  analyzer.py  backup.py  compactor.py  reporter.py
src/beekeeper/engine/: __init__.py  base.py  hive_external.py
src/beekeeper/utils/: __init__.py  hdfs.py  spark.py
src/compactor/: __init__.py  cli.py  compactor.py  hdfs_utils.py
src/lakekeeper/: __init__.py  __main__.py  cli.py  config.py  models.py
src/lakekeeper/core/: __init__.py  analyzer.py  backup.py  compactor.py  reporter.py
src/lakekeeper/engine/: base.py  hive_external.py
src/lakekeeper/utils/: __init__.py  hdfs.py  spark.py
tests/: conftest.py
tests/integration/: test_full_workflow.py
tests/unit/: test_analyzer.py  test_backup.py  test_cli.py  test_compactor.py  test_config.py  test_hdfs.py  test_hive_external_engine.py  test_models.py  test_reporter.py  test_spark_utils.py
