[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakekeeper"
version = "0.0.1"
description = "Safe compaction of Hive external tables on on-premises Kerberized Hadoop clusters"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ab2dridi", email = "a-d13@hotmail.fr"},
]
keywords = [
    "hive", "hdfs", "spark", "compaction", "hadoop", "kerberos",
    "pyspark", "data-engineering", "small-files", "iceberg", "data-lake",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ab2dridi/lakekeeper"
Repository = "https://github.com/ab2dridi/lakekeeper"
Changelog = "https://github.com/ab2dridi/lakekeeper/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/ab2dridi/lakekeeper/issues"

[project.scripts]
lakekeeper = "lakekeeper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
